# apicrate-mcp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: project_mcp.json  streamable_http_config.json
src/apicrate_mcp/: __init__.py  __main__.py  server.py
tests/: test_server.py
